# text2knowledge

./: .gitignore  LICENSE.md  README.md  REFERENCES.md  extract.py  extract_abstract.py  find_topn_chunks.py  pull_models.sh  requirements.txt  text2knowledge.py
chatbot/: Cargo.toml  README.md  README_CN.md
chatbot/src/: main.rs
classfication/: example.json  main.ipynb  prompt.md
classfication/results/: llama3_1_70b.json  mistral_7b.json  mixtral_8x22b.json  mixtral_8x7b.json
data/: disease.filtered-100.tsv  disease.filtered-500.tsv
examples/: biomedical_items.txt  example1.ipynb  prompt.md
examples/mecfs_longcovid/: run.sh
examples/pdf2json/extracted_pdfs/16451124/: 16451124.json
examples/pdf2json/extracted_pdfs/16451124/data/: 16451124.json
examples/pdf2json/extracted_pdfs/21723291/: 21723291.json
examples/pdf2json/extracted_pdfs/21723291/data/: 21723291.json
examples/text2knowledge/: abstract.txt  entities.json  relationships.json
notebooks/: disease.filtered-1000.tsv  example2.ipynb
pdf2json/: .gitignore  README.md  launch_grobid.sh
text2knowledge/: pdf.py  prompt_template.py  strategy1.py  strategy2.py  utils.py
text2knowledge/ollama/: client.py
